--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: movies_search_development
+  database: movie_search_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: movies_search
+  #username: movie_search
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: movies_search_test
+  database: movie_search_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: movies_search_production
-  username: movies_search
-  password: <%= ENV["MOVIES_SEARCH_DATABASE_PASSWORD"] %>
+  database: movie_search_production
+  username: movie_search
+  password: <%= ENV["MOVIE_SEARCH_DATABASE_PASSWORD"] %>
